premières fonctions js diapo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <title>ByBicycle</title>
     </head>
     <body>
+<img name='slide'>
+    
+    <script src='js/script.js'></script>
+    <button id='prevBtn' type="button" onclick="prevImg()">Précédent</button>
+    <button id='playBtn' type="button" onclick="playImg()">Play</button>
+    <button id='pauseBtn' type='button' onclick ="pauseImg()">Pause</button>
+    <button id='nextBtn' type="button" onclick ="nextImg()">Suivant</button>
 
-    </body>
-    <script scr='js/script.js'></script>
+</body>
 </html>
