--- a/index.html
+++ b/index.html
@@ -3,21 +3,56 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/lux/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <title>ByBicycle</title>
+    <link rel="icon" href="img/logo/favicon.png" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
+        integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+        crossorigin="" />
 </head>
 
 <body>
-    <img id='diapo'>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#"><img src="img/logo/bybicycle_b.png" alt="logo bybicycle" id="logo"></a>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                </li>
 
+            </ul>
+        </div>
+    </nav>
 
-    <button id='prevBtn' type="button">Précédent</button>
-    <button id='playBtn' type="button">Play</button>
-    <button id='pauseBtn' type='button'>Pause</button>
-    <button id='nextBtn' type="button">Suivant</button>
+    <section id="slider">
+        <img id='diapo' alt="slider">
+        <div class='control'>
+            <a id='prevBtn'><i class="fas fa-chevron-left"></i></a>
+            <a id='pauseBtn'><i class="fas fa-pause"></i></a>
+            <a id='nextBtn'><i class="fas fa-chevron-right"></i></a>
+        </div>
+    </section>
+    <div id="mapid"></div>
+    <footer>
+        <div class="blog-footer bg-primary text-center p-3 mt-2">
+            <p class="text-light">Copyright © Julie Pilarski - 2019 - Tous droits réservés</p>
+            <small class="text-light">Projet 3 - Formation Développeur Web Junior</small><br />
+            <a><small class="text-light">Mentions Légales </small></a><br />
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
+        integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
+        crossorigin=""></script>
     <script src='js/slider.js'></script>
+    <script src='js/map.js'></script>
 
 </body>
 
