Mise à jour class markers

--- a/index.html
+++ b/index.html
@@ -47,13 +47,19 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
         integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
         crossorigin=""></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src='js/slider.js'></script>
     <script src='js/map.js'></script>
 
+    <script>
+
+        const myMap = new Map(47.21837, -1.553621, mapid);
+        const myMakers = new Markers(mapid);
+
+    </script>
 </body>
 
 </html>
