Création class markers

--- a/index.html
+++ b/index.html
@@ -51,15 +51,12 @@
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
         integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
         crossorigin=""></script>
-    <script src='js/slider.js'></script>
-    <script src='js/map.js'></script>
 
-    <script>
-
-        const myMap = new Map(47.21837, -1.553621, mapid);
-        const myMakers = new Markers(mapid);
-
-    </script>
+    <script src='js/Class/Slider.js'></script>
+    <script src='js/Class/AjaxGet.js'></script>
+    <script src='js/Class/Map.js'></script>
+    <script src='js/Class/Markers.js'></script>
+    <script src='js/app.js'></script>
 </body>
 
 </html>
