--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Location de vélo de la ville de Nantes <span
+                            class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-
             </ul>
         </div>
     </nav>
@@ -37,7 +34,50 @@
             <a id='nextBtn'><i class="fas fa-chevron-right"></i></a>
         </div>
     </section>
-    <div id="mapid"></div>
+
+    <div class="row d-flex justify-content-around">
+        <div id="mapid" class='my-4'></div>
+        <div id="bloc_station" class='m-4 d-flex flex-column align-items-center justify-content-center'>
+            <h5 class='mb-4 font-weight-bold' id="info_station">Détail de la
+                Station</i></h5>
+
+            <div class="info d-flex flex-column align-items-center">
+
+                <p id='station_status' class="status mt-1"></p>
+
+                <label for="station_name" class='font-weight-bold text-primary'>Nom de la station :</label>
+                <p id='station_name' class="text-danger"></p>
+
+                <label for="station_address" class='font-weight-bold text-primary'>Adresse de la station
+                    :</label>
+                <p id='station_address' class="text-danger text-center"></p>
+
+                <div class='d-flex'>
+                    <p id='station_available_bikes'></p>
+                </div>
+
+                <div class='d-flex mt-1'>
+                    <p id='station_available_bike_stands'></p>
+                </div>
+
+                <p id='station_banking' class="ml-2"></p>
+            </div>
+            <form class="p-2" id="booking">
+                <label>Réserver :</label>
+                <div class="form-group">
+                    <input type="text" placeholder="Nom" name="name" class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="text" placeholder="Prénom" name="surname" class="form-control">
+                </div>
+                <div class="form-group d-flex justify-content-center">
+                    <input type="button" value="Réserver" class='btn btn-success'>
+                </div>
+            </form>
+
+        </div>
+    </div>
+
     <footer>
         <div class="blog-footer bg-primary text-center p-3 mt-2">
             <p class="text-light">Copyright © Julie Pilarski - 2019 - Tous droits réservés</p>
@@ -54,8 +94,12 @@
 
     <script src='js/Class/Slider.js'></script>
     <script src='js/Class/AjaxGet.js'></script>
+    <script src='js/Class/Markers.js'></script>
     <script src='js/Class/Map.js'></script>
     <script src='js/app.js'></script>
+    <script>
+        let newApp = new App();
+    </script>
 </body>
 
 </html>
