--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Location de vélo de la ville de Nantes <span
-                            class="sr-only">(current)</span></a>
+                            class="sr-only"></span></a>
                 </li>
             </ul>
         </div>
@@ -43,7 +43,7 @@
 
             <div class="info d-flex flex-column align-items-center">
 
-                <p id='station_status' class="status mt-1"></p>
+                <p id='station_statut' class="status mt-1"></p>
 
                 <label for="station_name" class='font-weight-bold text-primary'>Nom de la station :</label>
                 <p id='station_name' class="text-danger"></p>
@@ -65,16 +65,16 @@
             <form class="p-2" id="booking">
                 <label>Réserver :</label>
                 <div class="form-group">
-                    <input type="text" placeholder="Nom" name="name" class="form-control">
+                    <input type="text" placeholder="Nom" name="name" id="name" class="form-control">
                 </div>
                 <div class="form-group">
-                    <input type="text" placeholder="Prénom" name="surname" class="form-control">
+                    <input type="text" placeholder="Prénom" name="fn" id="fn" class="form-control">
                 </div>
                 <div class="form-group d-flex justify-content-center">
-                    <input type="button" value="Réserver" class='btn btn-success'>
+                    <input type="submit" value="Réserver" id='btn-booking' class='btn btn-success'>
                 </div>
             </form>
-
+            <!-- <canvas width="150" height="150" class="border" id="canvas"></canvas> -->
         </div>
     </div>
 
@@ -96,6 +96,7 @@
     <script src='js/Class/AjaxGet.js'></script>
     <script src='js/Class/Markers.js'></script>
     <script src='js/Class/Map.js'></script>
+    <script src='js/Class/Client.js'></script>
     <script src='js/app.js'></script>
     <script>
         let newApp = new App();
