--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <form class="p-2" id="booking">
                 <label>Réserver :</label>
                 <div class="form-group">
-                    <input type="text" placeholder="Nom" name="name" id="name" class="form-control">
+                    <input type="text" placeholder="Nom" name="name" id="name" class="form-control" required>
                 </div>
                 <div class="form-group">
-                    <input type="text" placeholder="Prénom" name="fn" id="fn" class="form-control">
+                    <input type="text" placeholder="Prénom" name="fn" id="fn" class="form-control" required>
                 </div>
                 <div class="form-group d-flex justify-content-center">
                     <input type="submit" value="Réserver" id='btn-booking' class='btn btn-success'>
@@ -97,6 +97,7 @@
     <script src='js/Class/Markers.js'></script>
     <script src='js/Class/Map.js'></script>
     <script src='js/Class/Client.js'></script>
+    <script src='js/Class/Bookings.js'></script>
     <script src='js/app.js'></script>
     <script>
         let newApp = new App();
