--- a/index.html
+++ b/index.html
@@ -50,15 +50,14 @@
         <p class="text-danger text-center"><span id="station_address"></span></p>
 
         <div class="d-flex">
-          <p id="station_available_bikes" class=' text-success border border-success p-2 '>
+          <p id="station_available_bikes" class='available_bike'>
             <i class='fas fa-bicycle'></i> <span id="nb_bike"></span> Vélos disponibles
           </p>
         </div>
 
         <div class="d-flex mt-1">
-          <p class='text-success border border-success p-2 d-flex'><span id="station_available_bike_stands"
-              class='mr-1'></span>
-            Places disponibles</p>
+          <p class='d-flex available_bike_stand' id="station_available_bike_stands">
+          </p>
         </div>
 
         <p id="station_banking" class="ml-2"></p>
