--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
     <div class="control">
       <a id="prevBtn"><i class="fas fa-chevron-left"></i></a>
       <a id="pauseBtn"><i class="fas fa-pause"></i></a>
+      <a id="playBtn"><i class="fas fa-play"></i></a>
       <a id="nextBtn"><i class="fas fa-chevron-right"></i></a>
     </div>
   </section>
 
   <div class="row d-flex justify-content-around">
-    <div id="mapid" class="my-4"></div>
 
+    <div id="mapid" class="my-4"></div>
 
     <div id="bloc_station" class="m-4 d-flex flex-column align-items-center">
 
@@ -64,22 +65,26 @@
 
       <p id="station_banking" class="ml-2"></p>
 
-      <button class="btn btn-success" id="showBooking">
+      <button class="btn btn-success btn-sm" id="showBooking">
         Effectuer une réservation
       </button>
 
+
       <form id="booking">
-        <h5 class=" my-4 font-weight-bold" id="info_station">Réservation</h5>
-        <div class="form-group">
-          <input type="text" placeholder="Nom" name="name" id="name" class="form-control">
-        </div>
-        <div class="form-group">
-          <input type="text" placeholder="Prénom" name="fn" id="fn" class="form-control">
-        </div>
-        <div id='error_form'></div>
-        <button id="erase" class='btn btn-info btn-sm'>Effacer</button>
-        <div class="form-group d-flex justify-content-center">
-          <input type='button' value="Signer" id="sign_btn" class="btn btn-success mt-2" />
+        <div id='input_booking'>
+          <h5 class=" my-4 font-weight-bold" id="info_station">Réservation</h5>
+          <div class="form-group">
+            <input type="text" placeholder="Nom" name="name" id="name" class="form-control enterForm">
+          </div>
+          <div class="form-group">
+            <input type="text" placeholder="Prénom" name="fn" id="fn" class="form-control enterForm">
+          </div>
+          <div id='error_form'></div>
+
+          <div class="form-group d-flex justify-content-between">
+            <button type='button' id="erase" class='btn btn-info mt-2 btn-sm'>Effacer</button>
+            <input type='button' value="Signer" id="sign_btn" class="btn btn-success mt-2 btn-sm" />
+          </div>
         </div>
 
         <div id='sign_form'>
@@ -107,7 +112,6 @@
       <p id="timer" class="font-weight-bold text-center"></p>
     </div>
   </div>
-
   <footer>
     <div class="blog-footer bg-primary text-center p-3 mt-2">
       <p class="text-light">
