Mise à jour du style

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#"><img src="img/logo/bybicycle_b.png" alt="logo bybicycle" id="logo" /></a>
+  <nav class="navbar navbar-expand-lg">
+    <img src="img/logo/bybicycle_orange.png" alt="logo bybicycle" id="logo" />
+    <div class="lign-color"></div>
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Location de vélo de la ville de Nantes
-            <span class="sr-only"></span></a>
+        <li class="nav-item active d-flex">
+          <h1>Louez votre vélo !</h1>
+          <h5 id="color-title" class="ml-5">ville de Nantes</h5>
         </li>
       </ul>
     </div>
@@ -25,10 +26,12 @@
 
   <section id="slider">
     <img id="diapo" alt="slider" />
-    <div class="control">
+    <div class="control d-flex justify-content-between align-items-center mx-4">
       <a id="prevBtn"><i class="fas fa-chevron-left"></i></a>
-      <a id="pauseBtn"><i class="fas fa-pause"></i></a>
-      <a id="playBtn"><i class="fas fa-play"></i></a>
+      <div class="d-flex justify-content-center">
+        <a id="pauseBtn" class='mx-2'><i class="fas fa-pause"></i></a>
+        <a id="playBtn" class='mx-2'><i class="fas fa-play"></i></a>
+      </div>
       <a id="nextBtn"><i class="fas fa-chevron-right"></i></a>
     </div>
   </section>
@@ -47,10 +50,10 @@
         <p class="status mt-1" id="station_statut"></p>
 
         <label for="station_name" class="font-weight-bold text-primary">Nom de la station :</label>
-        <p class="text-danger"><span id="station_name"></span></p>
+        <p class="text-info"><span id="station_name"></span></p>
 
         <label for="station_address" class="font-weight-bold text-primary">Adresse de la station :</label>
-        <p class="text-danger text-center"><span id="station_address"></span></p>
+        <p class="text-info text-center"><span id="station_address"></span></p>
 
         <div class="d-flex">
           <p id="station_available_bikes">
@@ -113,12 +116,12 @@
     </div>
   </div>
   <footer>
-    <div class="blog-footer bg-primary text-center p-3 mt-2">
-      <p class="text-light">
+    <div class="blog-footer text-center p-3 mt-2">
+      <p>
         Copyright © Julie Pilarski - 2019 - Tous droits réservés
       </p>
-      <small class="text-light">Projet 3 - Formation Développeur Web Junior</small><br />
-      <a><small class="text-light">Mentions Légales </small></a><br />
+      <small>Projet 3 - Formation Développeur Web Junior</small><br />
+      <a><small>Mentions Légales </small></a><br />
     </div>
   </footer>
 
