--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <img src="img/logo/bybicycle_orange.png" alt="logo bybicycle" id="logo" />
-    <div class="lign-color"></div>
     <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active d-flex">
+      <ul class="navbar-nav col-12">
+        <li class="nav-item d-flex align-items-center justify-content-around col-12">
           <h1>Louez votre vélo !</h1>
-          <h5 id="color-title" class="ml-5">ville de Nantes</h5>
+          <h5 id="color-title">ville de Nantes</h5>
         </li>
       </ul>
     </div>
@@ -109,10 +108,12 @@
   </div>
 
   <div id='current_booking'>
-    <h5>Votre réservation :</h5>
-    <div class="d-flex flex-column align-item-center justify-content-center" id="content_booking">
-      <p id='booking_info'></p>
-      <p id="timer" class="font-weight-bold text-center"></p>
+    <div class='d-flex justify-content-center flex-column align-items-center'>
+      <h5 id='your_booking'>Votre réservation :</h5>
+      <div id="content_booking" class='d-flex flex-column align-items-center'>
+        <p id='booking_info'></p>
+        <p id="timer"></p>
+      </div>
     </div>
   </div>
   <footer>
