Mise à jour style

--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
 
     <div id="bloc_station" class="m-4 d-flex flex-column align-items-center">
 
-      <h5 class=" my-4 font-weight-bold text-center" id="info_station">
+      <h5 class=" my-4 font-weight-bold text-center text-light" id="info_station">
         Détail de la Station
       </h5>
 
       <div class="info d-flex flex-column align-items-center" id="bloc_info">
         <p class="status mt-1" id="station_statut"></p>
 
-        <label for="station_name" class="font-weight-bold text-primary">Nom de la station :</label>
-        <p class="text-info"><span id="station_name"></span></p>
+        <label for="station_name" class="font-weight-bold text-light">Nom de la station :</label>
+        <p><span id="station_name"></span></p>
 
-        <label for="station_address" class="font-weight-bold text-primary">Adresse de la station :</label>
-        <p class="text-info text-center"><span id="station_address"></span></p>
+        <label for="station_address" class="font-weight-bold text-light">Adresse de la station :</label>
+        <p class="text-center"><span id="station_address"></span></p>
 
         <div class="d-flex">
           <p id="station_available_bikes">
@@ -88,7 +88,7 @@
 
       <form id="booking">
         <div id='input_booking'>
-          <h5 class=" my-4 font-weight-bold" id="info_station">Réservation</h5>
+          <h5 class=" my-4 font-weight-bold text-light" id="info_station">Réservation</h5>
           <div class="form-group">
             <input type="text" placeholder="Nom" name="name" id="name" class="form-control enterForm">
           </div>
