--- a/index.html
+++ b/index.html
@@ -11,116 +11,133 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-lg">
-    <img src="img/logo/bybicycle_orange.png" alt="logo bybicycle" id="logo" />
-    <div class="collapse navbar-collapse" id="navbarColor01">
-      <ul class="navbar-nav col-12">
-        <li class="nav-item d-flex align-items-center justify-content-between col-12">
-          <h1>Louez votre vélo !</h1>
-          <h5 id="color-title">ville de Nantes</h5>
-        </li>
-      </ul>
+    <div class="nav-item d-flex align-items-center justify-content-between col-12">
+      <img src="img/logo/bybicycle_orange.png" alt="logo bybicycle" id="logo" />
+      <h1>Louez votre vélo !</h1>
+      <h5 id="color-title">ville de Nantes</h5>
     </div>
   </nav>
 
-  <section id="slider">
-    <div id="slides">
-      <ul>
-        <li><img src="img/bike1.jpeg" class="slide showing"></li>
-        <li><img src="img/bike2.jpeg" class="slide"></li>
-        <li><img src="img/bike3.jpeg" class="slide"></li>
-      </ul>
-    </div>
-    <a id="prevBtn"><i class="fas fa-chevron-left"></i></a>
-    <div class="d-flex justify-content-center">
-      <a id="pauseBtn"><i class='fas fa-pause'></i></a>
-      <a id="playBtn"><i class='fas fa-play'></i></a>
-    </div>
-    <a id="nextBtn"><i class="fas fa-chevron-right"></i></a>
-  </section>
+  <div class='container-fluid'>
+    <section id="slider">
+      <div id="slides">
+        <ul>
+          <li><img src="img/bike1.jpeg" class="slide showing"></li>
+          <li><img src="img/bike2.jpeg" class="slide"></li>
+          <li><img src="img/bike3.jpeg" class="slide"></li>
+        </ul>
+      </div>
+<div class='d-flex justify-content-around'>
+      <a id="prevBtn"><i class="fas fa-chevron-left"></i></a>
+      <div class="d-flex justify-content-center">
+        <a id="pauseBtn"><i class='fas fa-pause'></i></a>
+        <a id="playBtn"><i class='fas fa-play'></i></a>
+      </div>
+      <a id="nextBtn"><i class="fas fa-chevron-right"></i></a>
+</div>
+    </section>
 
-  <div id='current_booking'>
-    <div id="content_booking" class='d-flex flex-column align-items-center'>
-      <div class='border_booking'>
-        <h5 id='your_booking' class='text-center'>Votre réservation :</h5>
-        <p id='booking_info' class='text-center'></p>
-        <p id="timer" class='text-center'>Temps restant :</p>
+    <div id='current_booking' class="m-3">
+      <div id="content_booking" class='d-flex flex-column align-items-center'>
+        <div class='border_booking'>
+          <h5 id='your_booking' class='text-center'>Votre réservation :</h5>
+          <p id='booking_info' class='text-center'></p>
+          <p id="timer" class='text-center'>Temps restant :</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="row d-flex justify-content-around">
+    <div class="d-flex justify-content-around flex-column flex-lg-row">
 
-    <div id="mapid" class="my-4"></div>
+      <div id="mapid" class="col-lg-8"></div>
 
-    <div id="bloc_station" class="m-4 d-flex flex-column align-items-center">
+      <!-- Formulaire pour information sur station et réservation -->
 
-      <h5 class=" my-4 font-weight-bold text-center text-light" id="info_station">
-        Détail de la Station
-      </h5>
+      <div id="bloc_station" class="col-lg-3">
 
-      <div class="info d-flex flex-column align-items-center" id="bloc_info">
-        <p class="status mt-1" id="station_statut"></p>
+        <h5 class=" my-4 font-weight-bold text-center text-light" id="info_station">
+          Détail de la Station
+        </h5>
 
-        <label for="station_name" class="font-weight-bold text-light">Nom de la station :</label>
-        <p><span id="station_name"></span></p>
+        <div class="info" id="bloc_info">
 
-        <label for="station_address" class="font-weight-bold text-light">Adresse de la station :</label>
-        <p class="text-center"><span id="station_address"></span></p>
-
-        <div class="d-flex">
-          <p id="station_available_bikes">
-          </p>
-        </div>
-
-        <div class="d-flex mt-1">
-          <p id="station_available_bike_stands">
-          </p>
-        </div>
-      </div>
-
-      <p id="station_banking" class="ml-2"></p>
-
-      <button class="btn btn-success btn-sm" id="showBooking">
-        Effectuer une réservation
-      </button>
-
-
-      <form id="booking">
-        <div id='input_booking'>
-          <h5 class=" my-4 font-weight-bold text-light" id="info_station">Réservation</h5>
-          <div class="form-group">
-            <input type="text" placeholder="Nom" name="name" id="name" class="form-control enterForm">
+          <div class="d-flex justify-content-center">
+            <p class="status mt-1" id="station_statut"></p>
           </div>
-          <div class="form-group">
-            <input type="text" placeholder="Prénom" name="fn" id="fn" class="form-control enterForm">
-          </div>
-          <div id='error_form'></div>
 
-          <div class="form-group d-flex justify-content-between">
-            <button type='button' id="erase" class='btn btn-info mt-2 btn-sm'>Effacer</button>
-            <input type='button' value="Signer" id="sign_btn" class="btn btn-success mt-2 btn-sm" />
-          </div>
-        </div>
+          <div class='row flex-lg-column'>
 
-        <div id='sign_form'>
-          <div id="sign" class="m-4 d-flex flex-column align-items-center">
-            <div>Signature :</div>
-            <canvas width="195" height="150" id="canvas"></canvas>
-            <button id="clear_canvas" class="btn btn-primary btn-sm mt-2">
-              Effacer signature
-            </button>
-            <div id='error_sign'></div>
-            <div class="form-group d-flex justify-content-center">
-              <input type="submit" value="Réserver" id="btn-booking" class="btn btn-success mt-2" />
+            <div class='col-6 col-lg-12 text-lg-center'>
+
+              <label for="station_name" class="font-weight-bold text-light">Nom de la station :</label>
+              <p><span id="station_name"></span></p>
+
+              <label for="station_address" class="font-weight-bold text-light">Adresse de la station :</label>
+              <p><span id="station_address"></span></p>
+
+            </div>
+
+            <div class='col-6 col-lg-12'>
+
+              <div class="d-flex justify-content-center">
+                <p id="station_available_bikes"></p>
+              </div>
+
+              <div class="d-flex justify-content-center">
+                <p id="station_available_bike_stands"></p>
+              </div>
+
+              <div class='d-flex justify-content-center'>
+                <p id="station_banking" class="ml-2"></p>
+              </div>
+
             </div>
           </div>
-        </div>
-      </form>
 
+          <div class="d-flex justify-content-center">
+            <button class="btn btn-success btn-sm" id="showBooking">
+              Effectuer une réservation
+            </button>
+          </div>
+        </div>
+
+        <form id="booking">
+          <div id='input_booking'>
+            <h5 class=" my-4 font-weight-bold text-light" id="info_station">Réservation</h5>
+            <div class="form-group">
+              <input type="text" placeholder="Nom" name="name" id="name" class="form-control enterForm">
+            </div>
+            <div class="form-group">
+              <input type="text" placeholder="Prénom" name="fn" id="fn" class="form-control enterForm">
+            </div>
+            <div id='error_form'></div>
+
+            <div class="form-group d-flex justify-content-between">
+              <button type='button' id="erase" class='btn btn-info mt-2 btn-sm'>Effacer</button>
+              <input type='button' value="Signer" id="sign_btn" class="btn btn-success mt-2 btn-sm" />
+            </div>
+          </div>
+
+          <div id='sign_form'>
+            <div id="sign" class="m-4 d-flex flex-column align-items-center">
+              <div>Signature :</div>
+              <canvas width="195" height="150" id="canvas"></canvas>
+              <button id="clear_canvas" class="btn btn-primary btn-sm mt-2">
+                Effacer signature
+              </button>
+              <div id='error_sign'></div>
+              <div class="form-group d-flex justify-content-center">
+                <input type="submit" value="Réserver" id="btn-booking" class="btn btn-success mt-2" />
+              </div>
+            </div>
+          </div>
+        </form>
+
+      </div>
     </div>
   </div>
-
   <footer>
     <div class="blog-footer text-center p-3 mt-2">
       <p>
