Mise à jour du style

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/lux/bootstrap.min.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" />
@@ -124,18 +125,20 @@
             </div>
           </div>
         </form>
-        <div id='current_booking' class="m-3">
-          <div id="content_booking" class='d-flex flex-column align-items-center'>
-            <div class='border_booking'>
-              <h5 id='your_booking' class='text-center'>Votre réservation :</h5>
-              <p id='booking_info' class='text-center'></p>
-              <p id="timer" class='text-center'>Temps restant :</p>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
+  <div id='current_booking' class="m-3">
+    <div id="content_booking" class='d-flex flex-column align-items-center'>
+      <div class='border_booking'>
+        <h5 id='your_booking' class='text-center'>Votre réservation :</h5>
+        <p id='booking_info' class='text-center'></p>
+        <p id="timer" class='text-center'>Temps restant :</p>
+      </div>
+    </div>
+  </div>
+
+
   <footer>
     <div class="blog-footer text-center p-3 mt-2">
       <p>
