--- a/js/Class/index.html
+++ b/js/Class/index.html
@@ -22,25 +22,23 @@
   </nav>
 
   <div class='container-fluid'>
-
-    <div id="slider" class="d-flex align-items-center">
-      <a id="prevBtn"><i class="fas fa-chevron-left"></i></a>
+    <section id="slider">
       <div id="slides">
         <ul>
-          <li><img src="img/slide1.png" class="slide showing"></li>
-          <li><img src="img/slide2.png" class="slide"></li>
-          <li><img src="img/slide3.png" class="slide"></li>
+          <li><img src="img/bike1.jpeg" class="slide showing"></li>
+          <li><img src="img/bike2.jpeg" class="slide"></li>
+          <li><img src="img/bike3.jpeg" class="slide"></li>
         </ul>
       </div>
-      <a id="nextBtn"><i class="fas fa-chevron-right"></i></a>
-    </div>
-    <div class="d-flex justify-content-center">
-      <a id="pauseBtn"><i class='fas fa-pause'></i></a>
-      <a id="playBtn"><i class='fas fa-play'></i></a>
-    </div>
-
-
-
+      <div class='d-flex justify-content-around'>
+        <a id="prevBtn"><i class="fas fa-chevron-left"></i></a>
+        <div class="d-flex justify-content-center">
+          <a id="pauseBtn"><i class='fas fa-pause'></i></a>
+          <a id="playBtn"><i class='fas fa-play'></i></a>
+        </div>
+        <a id="nextBtn"><i class="fas fa-chevron-right"></i></a>
+      </div>
+    </section>
 
     <div class="d-flex justify-content-around flex-column flex-lg-row">
 
@@ -131,7 +129,7 @@
     </div>
   </div>
   <div id='current_booking' class="m-3">
-    <div id="content_booking" class='d-flex flex-column align-items-center col-12'>
+    <div id="content_booking" class='d-flex flex-column align-items-center'>
       <div class='border_booking'>
         <h5 id='your_booking' class='text-center'>Votre réservation :</h5>
         <p id='booking_info' class='text-center'></p>
