Mise à jour nom fichier + commentaires

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
 
   <script src="js/main.js"></script>
-  <script src="js/Class/AjaxGet.js"></script>
+  <script src="js/Class/Ajax.js"></script>
   <script src="js/Class/Bookings.js"></script>
   <script src="js/Class/Markers.js"></script>
   <script src="js/Class/Map.js"></script>
